Improved API security and setup
Updated authentication to use API keys, improved error handling, and added support for  GitHub and GitLab APIs via Spring Security and WebClient.  Modified `AuthenticationConfiguration.java`, `AuthenticationService.java`, `GitServiceFactory.java`, `WebClientConfig.java`, and related files.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: d2d85168-a934-4590-a120-492d512fb412
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/97834ac5-f060-4d95-a58a-45b5e7a88b66/78cafe09-875c-4072-812d-369100123449.jpg