@@ -1,50 +1,54 @@
 package com.gitintegration.api.config;
 
 import com.gitintegration.api.exception.GitApiException;
+import com.gitintegration.api.service.GitHubService;
+import com.gitintegration.api.service.GitLabService;
 import com.gitintegration.api.service.GitService;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.*;
 
 /**
- * Factory for getting GitService implementations by provider name
+ * Factory for creating GitService implementations based on provider
+ * This follows the Factory pattern to create the appropriate service implementation
  */
 @Component
 public class GitServiceFactory {
     
-    private final Map<String, GitService> serviceMap;
+    private final Map<String, GitService> serviceMap = new HashMap<>();
+    private final List<String> availableProviders = new ArrayList<>();
     
-    public GitServiceFactory(List<GitService> services) {
-        // Create a map of provider name -> service implementation
-        this.serviceMap = services.stream()
-                .collect(Collectors.toMap(
-                        GitService::getProviderName,
-                        Function.identity()
-                ));
+    public GitServiceFactory(GitHubService gitHubService, GitLabService gitLabService) {
+        // Register services
+        serviceMap.put("github", gitHubService);
+        serviceMap.put("gitlab", gitLabService);
+        
+        availableProviders.add("github");
+        availableProviders.add("gitlab");
     }
     
     /**
-     * Get the appropriate GitService implementation for a provider
-     * @param provider the provider name (e.g., "github", "gitlab")
-     * @return the GitService implementation
+     * Get a GitService implementation for the specified provider
+     * @param provider the Git provider (e.g., "github", "gitlab")
+     * @return the appropriate GitService implementation
      * @throws GitApiException if the provider is not supported
      */
     public GitService getService(String provider) {
-        GitService service = serviceMap.get(provider);
+        String normalizedProvider = provider.toLowerCase();
+        GitService service = serviceMap.get(normalizedProvider);
+        
         if (service == null) {
             throw new GitApiException("Unsupported Git provider: " + provider);
         }
+        
         return service;
     }
     
     /**
-     * Get all available Git service providers
-     * @return a list of provider names
+     * Get all available Git providers
+     * @return list of available provider names
      */
     public List<String> getAvailableProviders() {
-        return List.copyOf(serviceMap.keySet());
+        return Collections.unmodifiableList(availableProviders);
     }
 }
